--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button onclick="verificarRespuesta(1)">Responder</button>
         </div>
         <div id="pregunta2" class="pregunta" style="display: none;">
-            <p>¿En qué fecha fue nuestro primer aniversario?</p>
+            <p>¿Cuál es nuestra canción favorita?</p>
             <input type="text" id="respuesta2" placeholder="Escribe tu respuesta">
             <button onclick="verificarRespuesta(2)">Responder</button>
         </div>
